--- a/index.portifolio.html
+++ b/index.portifolio.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="imagens/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="imagens/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-             <title>Portifólio</title>
+             <title>Brandão Developer</title>
 </head>
 <body>
 
@@ -33,7 +33,7 @@
     </div>
 </header>
 
-<div class="sidebar">
+<aside class="sidebar">
     <nav>
         <ul class="menu">
             <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
@@ -48,7 +48,165 @@
         <a href=""><i class="fab fa-instagram"></i></a>
         <a href=""><i class="fab fa-twitter"></i></a>
     </div>
-</div>
+</aside>
+
+ <section class="sessao-conhecimentos">
+     <div class="sessao-header">
+         <h1>Conhecimentos</h1>
+     </div><!--sessao-header-->
+
+     <div class="conhecimentos">
+             <div class="conhecimento">
+                 <div class="conhecimento-header">
+                     <i class="fab fa-html5"></i>
+                     <h3>HTML</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>lorem30 sufnias sdnfusanfj sdfnudfu snfudfud udfffj  sdf usdfu sdfu uufufu ufu ufu</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-css3-alt"></i>
+                        <h3>CSS</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>lorem30 sufnias sdnfusanfj sdfnudfu snfudfud udfffj  sdf usdfu sdfu uufufu ufu ufu</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fas fa-pencil-alt"></i>
+                        <h3>Design</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>lorem30 sufnias sdnfusanfj sdfnudfu snfudfud udfffj  sdf usdfu sdfu uufufu ufu ufu</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-js"></i>
+                        <h3>Javascript</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>lorem30 sufnias sdnfusanfj sdfnudfu snfudfud udfffj  sdf usdfu sdfu uufufu ufu ufu</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-bootstrap"></i>
+                        <h3>Boostrap</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>lorem30 sufnias sdnfusanfj sdfnudfu snfudfud udfffj  sdf usdfu sdfu uufufu ufu ufu</p>
+                    </div>
+                </div>
+         <div class="conhecimento">
+             <div class="conhecimento-header">
+                 <i class="fab fa-github"></i>
+                 <h3>Git e GitHub</h3>
+                </div>
+                <div class="conhecimento-text">
+                    <p>lorem30 sufnias sdnfusanfj sdfnudfu snfudfud udfffj  sdf usdfu sdfu uufufu ufu ufu </p>
+                </div>
+            </div>
+            <div class="conhecimento-img-wrapper">
+                <img src="https://github.com/joaocarloslima/portifolio/blob/master/imagens/conhecimentos.png?raw=true" alt="">
+            </div>
+        </div><!--conhecimentos-->
+    </section>
+
+    <section class="sessao-projetos">
+        <div class="sessao-header">
+            <h1>Projetos</h1>
+        </div>
+        <div class="projetos">
+            <div class="card">
+                <div class="card-img-wrapper">
+                    <img src="projeto01.jpg" alt="imagem do projeto todo"/>
+                </div>
+                <div class="card-info">
+                    <h2>Javascript</h2>
+                    <h3>Calculadora</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas fringilla est urna, auctor eleifend urna tempus in. Fusce id dolor sed urna euismod sagittis. Vestibulum in sodales massa, sit amet dapibus urna.</p>
+                    <button class="btn">Saiba mais!</button>
+                </div>
+                </div>
+                <div class="card">
+                <div class="card-img-wrapper">
+                    <img src="projeto02.jpg" alt="imagens da maratoma"/>
+                </div>
+                <div class="card-info">
+                    <h2>Maratona</h2>
+                    <h3>HTML, CSS</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas fringilla est urna, auctor eleifend urna tempus in. Fusce id dolor sed urna euismod sagittis. Vestibulum in sodales massa, sit amet dapibus urna.</p>
+                    <button class="btn">Saiba mais!</button>
+                </div>
+            </div>
+
+                <div class="card">
+                <div class="card-img-wrapper">
+                    <img src="projeto03.jpg" alt="imagens de sites intitucionais"/>
+                </div>
+                <div class="card-info">
+                    <h2>Site institucional</h2>
+                    <h3>Criação de Websites</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas fringilla est urna, auctor eleifend urna tempus in. Fusce id dolor sed urna euismod sagittis. Vestibulum in sodales massa, sit amet dapibus urna.</p>
+                    <button class="btn">Saiba mais!</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="sessao-contato">
+        <div class="contato-wrapper">
+            <div class="contato-left"></div>
+            <div class="contato-right">
+                <h1>Contato</h1>
+                <form>
+                    <div class="input-group">
+                        <input type="text" class="field" id="nome">
+                        <label for="nome" class="field-label">Nome</label>
+                    </div>
+                    <div class="input-group">
+                        <input type="text" class="field" id="email">
+                        <label for="email" class="field-label">E-mail</label>
+                    </div>
+                    <div class="input-group">
+                        <textarea class="field" id="mensagem"></textarea>
+                        <label for="mensagem" class="field-label">Mensagem</label>
+                    </div>
+                    <button type="submit" class="btn btn_submit">Enviar</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <section class="sessao-orcamento">
+        <div class="orcamento-wrapper">
+            <h1>Faça um Orçamento</h1>
+            <form>
+                <label for="qtde">Qtde de Páginas</label>
+                <input type="number" min="1" name="qtde" id="qtde">
+                <label for="js">Preciso de um Script JS</label>
+                <input type="checkbox" name="js" id="js">
+                <label>Layout</label>
+                <div class="group-layout">
+                    <div>
+                        <input type="radio" name="layout" id="layout-sim">
+                        <label for="layout-sim">Preciso de um layout</label>
+                    </div>
+                    <div>
+                        <input type="radio" name="layout" id="layout-nao">
+                        <label for="layout-nao">Já tenho um layout</label>
+                    </div>
+                </div>
+                <label for="prazo">Prazo</label>
+                <input type="range" name="prazo" id="prazo">
+                <button class="btn btn-orcamento" type="submit">Enviar</button>
+            </form>
+        </div>
+    </section>
 </div>
 </body>
 
